Fixed Workspace icon jumping in sidebar if not in strip mode (https://github.com/zen-browser/desktop/issues/2413)

--- a/src/browser/base/content/zen-styles/zen-tabs/vertical-tabs.css
+++ b/src/browser/base/content/zen-styles/zen-tabs/vertical-tabs.css
@@ -208,6 +208,10 @@
     }
 
     & #zen-workspaces-button {
+      width: calc(100% - 10px) !important;
+    }
+
+    & #zen-workspaces-button {
       margin-left: 2px;
       margin-right: 2px;
 
