--- a/src/browser/base/content/zen-styles/zen-workspaces.css
+++ b/src/browser/base/content/zen-styles/zen-workspaces.css
@@ -79,7 +79,7 @@
     }
   }
 
-  :root:has(#navigator-toolbox:not([zen-has-hover='true'])) &[as-button='true'] {
+  &[as-button='true'] {
     margin: auto;
     padding: var(--toolbarbutton-inner-padding) !important;
     width: calc(2 * var(--toolbarbutton-inner-padding) + 16px) !important;
